Updates including hearing stage and confirmed hearing

--- a/app/views/hearings/index.html
+++ b/app/views/hearings/index.html
@@ -14,7 +14,8 @@
         </h1>
 
 
-        <p>Links open in a new tab.</p>
+        <p><span class="govuk-!-font-weight-bold"> Starting states </span>
+        <br>Links open in a new tab.</p>
 
         <p><a target="_blank" href="/hearings/first">No hearings / Request first hearing</a></p>
 
@@ -36,11 +37,42 @@
         <br>
         <br>
         <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+
+
+        <p><span class="govuk-!-font-weight-bold"> Links to each page  </span>
+            <br>Some pages have a dropdown in the footer to toggle states</p>
+
+        <p><a target="_blank" href="/hearings/pages/casedetailsdivorce">Hearings tab</a></p>
+
+        <p><a target="_blank" href="/hearings/pages/startrequest">General case and hearing details</a></p>
+
+        <p><a target="_blank" href="/hearings/pages/partiyrequirements">Party requirements</a></p>
+
+        <p><a target="_blank" href="/hearings/pages/channel">Hearing channel</a></p>
+
+        <p><a target="_blank" href="/hearings/pages/venuedefault">Venue</a></p>
+
+        <p><a target="_blank" href="/hearings/pages/region">Change venue - region</a>&nbsp;&nbsp; (optional path)</p>
+
+        <p><a target="_blank" href="/hearings/pages/venue?regionselection=Wales&">Change venue - Venues</a>&nbsp;&nbsp; (optional path)</p>
+
+        <p><a target="_blank" href="/hearings/pages/panel">New or exisiting panel</a>&nbsp;&nbsp;  (Conditional on this not being a first hearing)</p>
+
+        <p><a target="_blank" href="/hearings/pages/paneldifferent">New panel</a></p>
+
+        <p><a target="_blank" href="/hearings/pages/timing">Length and dates</a></p>
+
+        <p><a target="_blank" href="hearings/pages/language">Welsh</a>&nbsp;&nbsp; (Probably should be conditional on Welsh region)</p>
+
+        <p><a target="_blank" href="/hearings/pages/checkyouranswers">Check your answers</a>&nbsp;&nbsp; (Probably should be conditional on Welsh region)</p>
+
+        <p><a target="_blank" href="/hearings/pages/confirmchangesubmission">Confirm resubmission</a>&nbsp;&nbsp; (Conditional on editing a submitted request)</p>
+
+        <p><a target="_blank" href="/hearings/pages/confirmation">Confirmation</a>&nbsp;&nbsp; </p>
+
+        <p><a target="_blank" href="/hearings/pages/confirmcancel">Confirm 'Cancel' of a requested hearing</a>&nbsp;&nbsp; </p>
+
+
         <br>
         <br>
 
