--- a/app/views/hearings/pages/casedetailsdivorce.html
+++ b/app/views/hearings/pages/casedetailsdivorce.html
@@ -116,7 +116,7 @@ Case details
                                     {% if data.aftertenbmins == 'true' %}
                                         <tr class="govuk-table__row">
                                                 <td scope="row" class="govuk-table__cell" style="width:200px;">Submitted but not yet scheduled</td>
-                                                <td class="govuk-table__cell"><a href="checkyouranswers?drafthearing=false&changesallowed=true&">View and change</a></td>
+                                                <td class="govuk-table__cell"><a href="checkyouranswers?drafthearing=false&changesallowed=true&viewingconfirmedhearing=false&">View and change</a></td>
                                                 <td class="govuk-table__cell" style="text-align: right;"><a href="confirmcancel">Cancel</a></td>
                                         </tr>
                                     {%  endif  %}
@@ -124,7 +124,7 @@ Case details
                                     {% if data.justsubmitted == 'true' %}
                                         <tr class="govuk-table__row">
                                                 <td scope="row" class="govuk-table__cell" style="width:200px;">Submitted but not yet processed</td>
-                                                <td class="govuk-table__cell"><a href="checkyouranswers?drafthearing=false&changesallowed=false&">View details</a></td>
+                                                <td class="govuk-table__cell"><a href="checkyouranswers?drafthearing=false&changesallowed=false&viewingconfirmedhearing=false&">View details</a></td>
                                                 <td class="govuk-table__cell" style="text-align: right;"><a href="confirmcancel">Cancel</a></td>
                                         </tr>
                                     {%  endif  %}
@@ -148,7 +148,7 @@ Case details
                                 <tbody class="govuk-table__body">
                                     <tr class="govuk-table__row">
                                         <td scope="row" class="govuk-table__cell" style="width:200px;">5 October 2021</td>
-                                        <td class="govuk-table__cell"><a href="checkyouranswers?drafthearing=false&changesallowed=true&">View and change</a></td>
+                                        <td class="govuk-table__cell"><a href="checkyouranswers?drafthearing=false&changesallowed=true&viewingconfirmedhearing=false&">View and change</a></td>
                                         <td class="govuk-table__cell"><a href="confirmcancel">Cancel</a></td>
                                     </tr>
                                 </tbody>
@@ -184,11 +184,11 @@ Case details
                                 <tbody class="govuk-table__body">
                                     <tr class="govuk-table__row">
                                         <td scope="row" class="govuk-table__cell" style="width:200px;">5 May 2021</td>
-                                        <td class="govuk-table__cell"><a href="checkyouranswers?drafthearing=false&changesallowed=false&">View details</a></td>
+                                        <td class="govuk-table__cell"><a href="checkyouranswers?drafthearing=false&changesallowed=false&viewingconfirmedhearing=true&">View details</a></td>
                                     </tr>
                                     <tr class="govuk-table__row">
                                         <td scope="row" class="govuk-table__cell">13 December 2020</td>
-                                        <td class="govuk-table__cell"><a href="checkyouranswers?drafthearing=false&changesallowed=false&">View details</a></td>
+                                        <td class="govuk-table__cell"><a href="checkyouranswers?drafthearing=false&changesallowed=false&viewingconfirmedhearing=true&">View details</a></td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -207,7 +207,7 @@ Case details
                                 <tbody class="govuk-table__body">
                                 <tr class="govuk-table__row">
                                     <td scope="row" class="govuk-table__cell" style="width:200px;">11 May 2021</td>
-                                    <td class="govuk-table__cell"><a href="checkyouranswers?drafthearing=false&changesallowed=true&">View details</a></td>
+                                    <td class="govuk-table__cell"><a href="checkyouranswers?drafthearing=false&changesallowed=true&viewingconfirmedhearing=false&">View details</a></td>
                                 </tr>
                                 </tbody>
                             </table>
